fix: text-entry font-size, added overflow to section

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ section {
   flex-direction: column;
   justify-content: left;
   align-items: left;
+  overflow: auto;
 }
 
 .subtitle {
@@ -54,7 +55,7 @@ section {
 
 .text-entry {
   justify-content: left;
-  font-size: 2.5vh;
+  font-size: 2vh;
 }
 
 
